--- a/index.html
+++ b/index.html
@@ -47,8 +47,18 @@
       <div id="moodTab" class="tab-content active">
         <!-- Mood Input -->
         <section class="mood-input">
-        <h2>How are you feeling?</h2>
-        <div class="mood-selector">
+          <h2>How are you feeling?</h2>
+          <div class="mood-selector">
+            <div class="mood-emoji" data-mood="happy">😊</div>
+            <div class="mood-emoji" data-mood="sad">😢</div>
+            <div class="mood-emoji" data-mood="angry">😠</div>
+            <div class="mood-emoji" data-mood="anxious">😰</div>
+            <div class="mood-emoji" data-mood="calm">😌</div>
+          </div>
+          <textarea id="moodText" placeholder="How's your day going? (optional)"></textarea>
+          <button id="submitMoodBtn" class="primary">Submit Mood</button>
+        </section>
+
         <!-- Filter -->
         <section class="filter-section">
           <button class="filter-btn active" data-filter="all">All</button>
@@ -154,17 +164,7 @@
             <button id="deleteAccountBtn" class="danger-btn">Delete Account</button>
           </div>
         </div>
-      </divclass="filter-section">
-        <button class="filter-btn active" data-filter="all">All</button>
-        <button class="filter-btn" data-filter="today">Today</button>
-        <button class="filter-btn" data-filter="week">This Week</button>
-        <button class="filter-btn" data-filter="month">This Month</button>
-      </section>
-
-      <!-- Posts -->
-      <section id="postsContainer" class="posts-container">
-        <!-- Posts will appear here -->
-      </section>
+      </div>
     </div>
   </div>
 
